fixed extra padding on bottom of register form

--- a/styles/_register.scss
+++ b/styles/_register.scss
@@ -4,8 +4,9 @@
 	margin-left: 20%;
 	margin-right: 20%;
 	background: $contentBackground;
-	padding-bottom:7em;
+	padding-bottom:1em;
 	margin-top: 3em;
+	margin-bottom: 6em;
 	.reg-form{
 		height:100%;
 		width:100%;	
